@@ -38,6 +38,7 @@ SUBPROJECTS = \
     SimpleTranscript \
     Foundation \
     ObjectiveC \
+    StepTalk \
     $(APPKIT)
 
 -include GNUMakefile.preamble
