@@ -1,10 +1,10 @@
 /**
-    StepTalk.h
- 
-    Copyright (c) 2002 Free Software Foundation
- 
+    STScriptsManager
+  
+    Copyright (c)2002 Stefan Urbanek
+  
     Written by: Stefan Urbanek <urbanek@host.sk>
-    Date: 2001 Nov 1
+    Date: 2002 Mar 10
  
     This file is part of the StepTalk project.
  
@@ -12,29 +12,35 @@
     modify it under the terms of the GNU Lesser General Public
     License as published by the Free Software Foundation; either
     version 2 of the License, or (at your option) any later version.
- 
+
     This library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
     Lesser General Public License for more details.
- 
+  
     You should have received a copy of the GNU Lesser General Public
     License along with this library; if not, write to the Free Software
     Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
- 
- */
 
-#import <StepTalk/STEngine.h>
-#import <StepTalk/STEnvironment.h>
-#import <StepTalk/STExterns.h>
-#import <StepTalk/STFunctions.h>
-#import <StepTalk/STLanguage.h>
-#import <StepTalk/STModule.h>
-#import <StepTalk/STObjCRuntime.h>
-#import <StepTalk/STObjectReference.h>
-#import <StepTalk/STScript.h>
-#import <StepTalk/STScripting.h>
-#import <StepTalk/STScriptsManager.h>
-#import <StepTalk/STUndefinedObject.h>
+   */
 
-#import <StepTalk/NSInvocation+additions.h>
+#import <Foundation/NSObject.h>
+
+@class NSArray;
+@class STScript;
+
+@interface STScriptsManager:NSObject
+{
+    NSString *scriptsDomainName;
+}
++ defaultManager;
+
+- initWithDomainName:(NSString *)name;
+
+- (NSString *)scriptsDomainName;
+
+- (NSArray *)scriptSearchPaths;
+- (NSArray *)validScriptSearchPaths;
+- (NSArray *)scriptsAtPath:(NSString *)path;
+- (STScript *)scriptWithName:(NSString*)name;
+@end
