@@ -1,3 +1,8 @@
+2002 Jun 18
+
+    * STScript: new class (from AppTalk)
+    * STScriptsManager: new class (from AppTalk)
+
 2002 Jun 14
 
     * Modules/ObjectiveC: new module
